Fix testimonial arrows on Safari

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3551,6 +3551,10 @@ form[name='compose'] {
                 }
             }
 
+            .slick-next, .slick-prev {
+                height: 50px;
+            }
+
             .slick-prev:before,
             .slick-next:before {
                 font-family: 'FontAwesome';
